k8s-manifests/03-auth.yaml
# DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: sneakverse-auth
  template:
    metadata:
      labels:
        app: sneakverse-auth
    spec:
      containers:
        - name: auth-service
          image: sneakverse-auth:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
---

# SERVICE
apiVersion: v1
kind: Service
metadata:
  name: sneakverse-auth
spec:
  selector:
    app: sneakverse-auth
  ports:
  - protocol: TCP
    port: 8083
    targetPort: 8083
