k8s-manifests/04-monolith.yaml
# DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monolith-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sneakverse-monolith
  template:
    metadata:
      labels:
        app: sneakverse-monolith
    spec:
      containers:
        - name: monolith-service
          image: sneakverse-monolith:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
---
# SERVICE
apiVersion: v1
kind: Service
metadata:
  name: sneakverse-monolith
spec:
  selector:
    app: sneakverse-monolith
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
