k8s-manifests/05-orders.yaml
# DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sneakverse-orders
  template:
    metadata:
      labels:
        app: sneakverse-orders
    spec:
      containers:
        - name: orders-service
          image: sneakverse-orders:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
---
# SERVICE
apiVersion: v1
kind: Service
metadata:
  name: sneakverse-orders
spec:
  selector:
    app: sneakverse-orders
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
