k8s-manifests/07-gateway.yaml
# DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sneakverse-gateway
  template:
    metadata:
      labels:
        app: sneakverse-gateway
    spec:
      containers:
        - name: gateway-service
          image: sneakverse-gateway:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
---
# SERVICE ESPOSTO (NodePort)
apiVersion: v1
kind: Service
metadata:
  name: sneakverse-gateway
spec:
  type: NodePort
  selector:
    app: sneakverse-gateway
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30000
