k8s-manifests/09-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sneakverse-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: sneakverse.it
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: sneakverse-gateway
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sneakverse-frontend
            port:
              number: 80
